Start rework of Webapi
